option('frida_version',
  type: 'string',
  value: '',
  description: 'Frida version, such as 16.2.2 or 16.2.2-dev.27',
)

option('local_backend',
  type: 'feature',
  value: 'auto',
  description: 'Include backend for the local system',
)

option('fruity_backend',
  type: 'feature',
  value: 'auto',
  description: 'Include the Fruity backend',
)

option('droidy_backend',
  type: 'feature',
  value: 'auto',
  description: 'Include the Droidy backend',
)

option('socket_backend',
  type: 'feature',
  value: 'auto',
  description: 'Include the Socket backend',
)

option('barebone_backend',
  type: 'feature',
  value: 'auto',
  description: 'Include the Barebone backend',
)

option('compiler_backend',
  type: 'feature',
  value: 'auto',
  description: 'Include frida-compile backend powered by GumJS',
)

option('compiler_snapshot',
  type: 'feature',
  value: 'auto',
  description: 'Speed up compiler startup by using a snapshot'
)

option('assets',
  type: 'combo',
  choices: ['embedded', 'installed'],
  value: 'embedded',
  description: 'Whether assets such as frida-agent should be embedded vs installed and loaded at runtime'
)

option('asset_path_template',
  type: 'string',
  description: 'Override the default installed asset path template'
)

option('compat',
  type: 'array',
  choices: ['auto', 'disabled', 'native', 'emulated'],
  value: ['auto'],
  description: 'Support for targets with a different architecture',
)

option('helper_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt frida-helper to embed for use on modern systems'
)

option('helper_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt frida-helper to embed for use on legacy systems'
)

option('agent_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on modern targets'
)

option('agent_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on legacy targets'
)

option('agent_emulated_modern',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on modern emulated targets'
)

option('agent_emulated_legacy',
  type: 'string',
  value: 'auto',
  description: 'Prebuilt agent to embed for use on legacy emulated targets'
)

option('gadget',
  type: 'feature',
  value: 'auto',
  description: 'Build frida-gadget',
)

option('server',
  type: 'feature',
  value: 'auto',
  description: 'Build frida-server',
)

option('portal',
  type: 'feature',
  value: 'auto',
  description: 'Build frida-portal',
)

option('inject',
  type: 'feature',
  value: 'auto',
  description: 'Build frida-inject',
)

option('connectivity',
  type: 'feature',
  value: 'auto',
  description: 'Internet connectivity features (TLS and ICE support)'
)

option('mapper',
  type: 'feature',
  value: 'auto',
  description: 'Use our own out-of-process dynamic linker for injection on i/macOS'
)

option('devkits',
  type: 'array',
  choices: ['core'],
  value: [],
  description: 'Devkits to build'
)

option('tests',
  type: 'feature',
  value: 'auto',
  description: 'Build tests'
)
