option('mapper',
  type: 'feature',
  value: 'auto',
  description: 'Use our own out-of-process dynamic linker for injection on i/macOS'
)

option('helper32',
  type: 'string',
  value: '',
  description: 'Prebuilt 32-bit frida-helper'
)

option('helper64',
  type: 'string',
  value: '',
  description: 'Prebuilt 64-bit frida-helper'
)

option('agent32',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to use for 32-bit targets'
)

option('agent64',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to use for 64-bit targets'
)

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build tests'
)
