option('mapper',
  type: 'feature',
  value: 'auto',
  description: 'Use our own out-of-process dynamic linker for injection on i/macOS'
)

option('helper_modern',
  type: 'string',
  value: '',
  description: 'Prebuilt frida-helper for modern systems'
)

option('helper_legacy',
  type: 'string',
  value: '',
  description: 'Prebuilt frida-helper for legacy systems'
)

option('agent_modern',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to use for modern targets'
)

option('agent_legacy',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to use for legacy targets'
)

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build tests'
)
