option('assets',
  type: 'combo',
  choices: ['embedded', 'installed'],
  value: 'embedded',
  description: 'Whether assets such as frida-agent should be embedded vs installed and loaded at runtime'
)

option('mapper',
  type: 'feature',
  value: 'auto',
  description: 'Use our own out-of-process dynamic linker for injection on i/macOS'
)

option('helper_modern',
  type: 'string',
  value: '',
  description: 'Prebuilt frida-helper to embed for use on modern systems'
)

option('helper_legacy',
  type: 'string',
  value: '',
  description: 'Prebuilt frida-helper to embed for use on legacy systems'
)

option('agent_modern',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to embed for use on modern targets'
)

option('agent_legacy',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to embed for use on legacy targets'
)

option('agent_emulated_modern',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to embed for use on modern emulated targets'
)

option('agent_emulated_legacy',
  type: 'string',
  value: '',
  description: 'Prebuilt agent to embed for use on legacy emulated targets'
)

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build tests'
)
